wrote more build targets for fine-grained control of warnings tested Debug and DebugWithWarnings, have not tested DebugWithWarningsOptimized

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,25 +10,59 @@ FILE(GLOB SRC src/*.cpp src/*.h)
 #see http://stackoverflow.com/questions/10851247/how-to-activate-c-11-in-cmake for proper ways to enable C++11
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-if((${CMAKE_BUILD_TYPE} STREQUAL "DEBUG") OR (${CMAKE_BUILD_TYPE} STREQUAL "Debug"))
-    message("Building in debug mode.")
-    #see http://stackoverflow.com/questions/5352074/how-to-create-a-c-define-for-a-certain-target-using-cmake
-    add_definitions( -DDEBUG )
+#divide debug fields into common (i.e. non compiler-specific) debug flags, GCC-specific flags and clang-specific flags
+########################################
+set(COMMON_DEBUG_FLAGS "-g -Wall -Wextra -Wstrict-prototypes -Wundef -Wcast-qual -Wconversion -Wformat=2 -Wshadow -ftrapv -Wuninitialized -Winit-self -Wcast-align -Wwrite-strings")
+
+#Apple LLVM version 6.1.0 (clang-602.0.53) (based on LLVM 3.6.0svn) doesn't support -faddress=sanitize
+#NOTE THAT VALGRIND WILL NOT WORK WITH -fsanitize=address (the other flags do not seem to pose a problem)
+set(CLANG_SANITIZE_ADDRESS_FLAG "-fsanitize=address")
+set(GCC_OPTIMIZE_DEBUG "-Og")
+########################################
+
+function(EnableDebugWarnings)
+    add_definitions( -DDEBUG ) 
+    #enable non-compiler specific flags
+    #by default variables set in a function are in local scope!  need PARENT_SCOPE to modify global variables
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_DEBUG_FLAGS}" PARENT_SCOPE)
 
     #add clang-specific debugging flags
+    #note: clang with apple modifications is named AppleClang (which will fail STREQUAL "Clang")
+    #use MATCHES "Clang" to check for either kind of clang
     #see http://stackoverflow.com/questions/10046114/in-cmake-how-can-i-test-if-the-compiler-is-clang
-    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        #NOTE THAT VALGRIND WILL NOT WORK WITH -fsanitize=address (the other flags do not seem to pose a problem)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wall -Wextra -Wstrict-prototypes -Wundef -Wcast-qual -Wconversion -Wformat=2 -Wshadow -ftrapv -Wuninitialized -Winit-self -Wcast-align -Wwrite-strings")
+    if(("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang") AND NOT ${APPLE})
+        message("Building with clang on a non-Apple machine.  Enabling -faddress=sanitize.")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CLANG_SANITIZE_ADDRESS_FLAG}" PARENT_SCOPE)
     endif()
+endfunction()
 
-else((${CMAKE_BUILD_TYPE} STREQUAL "DEBUG") OR (${CMAKE_BUILD_TYPE} STREQUAL "Debug"))
+if((${CMAKE_BUILD_TYPE} STREQUAL "DEBUG") OR (${CMAKE_BUILD_TYPE} STREQUAL "Debug"))
+    message("Building in debug mode without warnings.")
+    message("To enable warnings, pass -DCMAKE_BUILD_TYPE=DebugWithWarnings")
+    #see http://stackoverflow.com/questions/5352074/how-to-create-a-c-define-for-a-certain-target-using-cmake
+    add_definitions( -DDEBUG )
+elseif(${CMAKE_BUILD_TYPE} STREQUAL "DebugWithWarnings")
+    message("Building in debug mode with warnings.")
+    message("To disable warnings, pass -DCMAKE_BUILD_TYPE=Debug")
+    EnableDebugWarnings()
+#GCC has an -Og option to enable optimizations that won't interfere with debugging
+elseif(${CMAKE_BUILD_TYPE} STREQUAL "DebugWithWarningsOptimize")
+    EnableDebugWarnings()
+    if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+        message("GNU compiler detected, building in optimized debug mode with warnings.")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_OPTIMIZE_DEBUG}")
+    else()
+        message("WARNING: COMPILER IS NOT GNU" WARNING)
+        message("CANNOT BUILD IN OPTIMIZED DEBUG MODE!" WARNING)
+        message("BUILDING IN DebugWithWarnings MODE!" WARNING)
+    endif()
+else()
     message("Not building in debug mode.")
     #disables assertions
     #see http://stackoverflow.com/questions/5354314/how-to-completely-disable-assertion
     #mandated by POSIX
     add_definitions( -DNDEBUG )
-endif((${CMAKE_BUILD_TYPE} STREQUAL "DEBUG") OR (${CMAKE_BUILD_TYPE} STREQUAL "Debug"))
+endif()
 
 add_library(ant_farm_lib ${SRC})
 
